--- a/ui_project/contact.html
+++ b/ui_project/contact.html
@@ -22,7 +22,7 @@
 <body>
     <header class="header">
         <h1>Hệ thống Quản lý Xe máy</h1>
-        <p>Liên hệ với chúng tôi</p>
+        <p>Nguyễn Nhật Duy - Ngô Quốc Huy</p>
     </header>
 
     <div class="navbar">
