--- a/ui_project/homepage.html
+++ b/ui_project/homepage.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="content">
-        <h2>Chào mừng đến với Hệ thống Quản lý Xe máy</h2>
+        <h2>Hệ thống quản lý cho thuê xe máy</h2>
         <div class="feature-grid">
             <div class="feature-card">
                 <i class="fas fa-motorcycle"></i>
