--- a/ui_project/info.html
+++ b/ui_project/info.html
@@ -81,8 +81,8 @@
                     <input type="tel" id="editPhoneNumber" required>
                 </div>
                 <div class="form-group">
-                    <label>Mã thẻ:</label>
-                    <input type="text" id="editCardId" required>
+                    <label>Địa chỉ:</label>
+                    <input type="text" id="editAddress" required>
                 </div>
                 <div class="form-group">
                     <label>Biển số xe:</label>
